--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "socket.io": "^1.4.8",
+    "socket.io-client": "^1.5.0",
     "three": "^0.81.2"
   }
 }
